2009-11-09  Konstantinos KOUSOURIS  <konstantinos.kousouris@cern.ch>
        * added the ability to calculate the correction from response inversion.
        This affected JetCorrectorParameters and SimpleJetCorrector.
 
2009-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

        * add STANDALONE directives, and statements within, which replace
	the use of cms::Exception by std::runtime_error
	* add Makefile for standalone compilation of
	JetCorrectorParameters, SimpleJetCorrector, and
	FactorizedJetCorrector (based on above STANDALONE directives)
	* Makefile contains build instructions
	* replace 'CombinedJetCorrector' with 'FactorizedJetCorrector' in
	several strings across FactorizedJetCorrector.cc